# intern_two_exe_task

./: .gitignore  CMakeLists.txt  intern_task.cpp
first_program/: buffer.cpp  buffer.h  first_program.cpp  first_program.h  reader.cpp  reader.h  writer.cpp  writer.h
second_program/: receiver.cpp  receiver.h  second_program.cpp
